인증코드 발송 구현 완료

--- a/src/main/resources/static/css/user/hippobook.css
+++ b/src/main/resources/static/css/user/hippobook.css
@@ -971,3 +971,13 @@ sup {
   padding: 0 24px;
   border-radius: 4px;
 }
+
+.phone-code-check-button{
+  background-color: #ffeb60;
+  color: #242424;
+  height: 30px;
+  font-size: 13px;
+  padding: 0 24px;
+  border-radius: 4px;
+}
+
