--- a/src/main/resources/templates/mypage/myPageInt.html
+++ b/src/main/resources/templates/mypage/myPageInt.html
@@ -82,10 +82,10 @@
                 </div>
             </div>
             <div id="my-favorite-book">
-                <img th:if="*{fileId == null}"
-                     th:src="@{/imgs/mypage/best_book_default.png}">
-                <img th:unless="*{fileId == null}"
-                     th:src="@{'/upload/' + *{fileUploadPath} + '/' + *{fileUuid} + '_' + *{fileName}}"
+                <img th:if="*{cover == null}"
+                     th:src="@{/imgs/mypage/best_book_default.png}" alt=""/>
+                <img th:unless="*{cover == null}"
+                     th:src="${profileDto.cover}"
                      id="best-book-img" alt=""/>
             </div>
         </section>
@@ -130,7 +130,7 @@
             <div class="my-recent-book" th:if="${i < bookContainerList.size()}"
                  th:with="bookContainerDto=${bookContainerList.get(i)}">
                 <div class="reading-book-img">
-                    <img th:src="@{'/upload/' + ${bookContainerDto.fileUploadPath} + '/' + ${bookContainerDto.fileUuid} + '_' + ${bookContainerDto.fileName}}"
+                    <img th:src="${bookContainerDto.cover}"
                          alt="">
                 </div>
                 <div class="reading-book-infor">
