검색 페이지 완

--- a/src/main/resources/static/css/book/book_info_page.css
+++ b/src/main/resources/static/css/book/book_info_page.css
@@ -269,9 +269,9 @@ ul {
   bottom: 2px;
 }
 
-.main__book-comment-content-box > h3 > a > span {
+.main__book-comment-content-box > h3 > span > span {
   color: black;
-  padding-left: 2px;
+  padding-left: 5px;
 }
 
 .book__decl-box {
