--- a/src/main/resources/templates/book/book_info_page.html
+++ b/src/main/resources/templates/book/book_info_page.html
@@ -30,10 +30,10 @@
               </div>
               <div>
                 <p>한 줄 리뷰</p>
-                <strong>6개</strong>
+                <strong><span>6</span>개</strong>
               </div>
-              <div>
-                <p th:if="${bookHas == 0}">책 담기</p>
+              <div th:if="${bookHas == 0}">
+                <p>책 담기</p>
               </div>
             </div>
           </div>
