--- a/src/main/resources/templates/main/searchpage.html
+++ b/src/main/resources/templates/main/searchpage.html
@@ -61,7 +61,7 @@
                 <label>
                     <div class="search_inner">
                         <div class="search_input">
-                            <input type="text" id="input" placeholder="검색어를 입력하세요." autofocus data-focus="F">
+                            <input type="text" id="input" placeholder="검색어를 입력하세요." autofocus data-focus="T">
                             <button></button>
                         </div>
                     </div>
@@ -226,7 +226,7 @@
                 </div>
             </div>
             <div class="search_text">
-                <p>도서를 검색해보세요</p>
+<!--                <p>도서를 검색해보세요</p>-->
             </div></div>
 
 
