--- a/src/main/resources/static/css/main/searchpage.css
+++ b/src/main/resources/static/css/main/searchpage.css
@@ -298,6 +298,7 @@ label{
 }
 
 .book-result-title-writer-box{
+    margin-top: 10px;
     min-width: 125px;;
 }
 
@@ -307,8 +308,9 @@ label{
     font-weight: 700;
     overflow:hidden;
     text-overflow:ellipsis;
-    webkit-box-orient:vertical;
-    -webkit-line-clamp:3
+    display: -webkit-box;
+    -webkit-box-orient :vertical;
+    -webkit-line-clamp :2
 }
 
 .book-result-writer{
@@ -316,8 +318,9 @@ label{
     font-size: 14px;
     overflow:hidden;
     text-overflow:ellipsis;
-    webkit-box-orient:vertical;
-    -webkit-line-clamp:3
+    display: -webkit-box;
+    -webkit-box-orient :vertical;
+    -webkit-line-clamp :2
 }
 
 .main__week-recommend-word-container,
@@ -354,14 +357,20 @@ label{
 
 .main__search-recommend-box > li {
     margin-top: 14px;
-    padding: 8px 12px;
+    padding: 10px 12px;
     border-radius: 36px;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 16px;
     border: 2px solid #888888;
     margin-right: 20px;
 }
+
+.main__search-recommend-box > li:hover{
+    background-color: #f3efef;
+}
+
 .main__search-recommend-box > li > span{
+    display: block;
     font-weight: 400;
     font-size: 16px;
     color: #736c6c;
