id_duplication_test JS 이름 변경

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -9,7 +9,7 @@
     <script defer th:src="@{/js/user/register.js}"></script>
     <script defer th:src="@{/js/user/sms_code_timer.js}"></script>
     <script defer th:src="@{/js/user/sms_click_event.js}"></script>
-    <script defer th:src="@{/js/user/id_duplication.js}"></script>
+    <script defer th:src="@{/js/user/id_duplication_test.js}"></script>
 </head>
 <body data-theme="light">
 <div data-a-1120 id="wrap" class="web-mount">
