--- a/src/main/resources/templates/main/mainpage.html
+++ b/src/main/resources/templates/main/mainpage.html
@@ -10,40 +10,6 @@
   <body>
   <header class="header" th:replace="~{/fragment/header :: header}"></header>
     <main>
-      <!-- 메인 상단 -->
-      <div class="main_top">
-        <div class="main_top_layout">
-          <button type="button" class="category_openBtn" id="OpenBtn">
-            <!-- 모달창 띄우는 버튼  -->
-            <img
-              th:src="@{/images/book/category.png}"
-              alt=""
-              class="main_top_category"
-            />
-          </button>
-          <div class="main_top_category_tap">
-            <ul class="main_top_category_list">
-              <li class="main_top_category_list2">
-                <a th:href="@{/mypage/int}" class="main_top_category_list_title">내 서재</a>
-                <!-- 내 서재 이동 -->
-              </li>
-              <li class="main_top_category_list2">
-                <a th:href="@{/message/letter/get}" class="main_top_category_list_title">쪽지</a>
-                <!-- 쪽지 이동 -->
-              </li>
-              <li class="main_top_category_list2">
-                <a th:href="@{/search}" class="main_top_category_list_title">검색</a>
-                <!-- 검색 이동 -->
-              </li>
-              <li class="main_top_category_list2">
-                <a th:href="@{/categorie/Categoriepage}" class="main_top_category_list_title">카테고리</a>
-                <!-- 카테고리 이동 -->
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
       <!-- 메인 슬라이더 배너 부분 부터 -->
       <div class="main_content">
         <section class="slides_wrap">
@@ -221,10 +187,10 @@
         </div>
       </div>
 
-      <!-- 이벤트 바로가기 -->
+      <!-- 요즘 인기 -->
       <div class="main_event">
         <div class="main_event_inner">
-          <div class="main_event_title">이벤트 바로가기</div>
+          <div class="main_event_title">요즘 인기</div>
           <div class="main_event_content">
             <ul class="main_event_content_layout">
               <li class="main_event_content_box">
@@ -234,12 +200,12 @@
               </li>
               <li class="main_event_content_box">
                 <a href="">
-                  <img th:src="@{/images/main/event_thumbnail.png}" alt="">
+                  <img th:src="@{/images/main/thumbnail1.png}" alt="">
                 </a> <!--이벤트 페이지 이동-->
               </li>
               <li class="main_event_content_box">
                 <a href="">
-                  <img th:src="@{/images/main/event_thumbnail.png}" alt="">
+                  <img th:src="@{/images/main/thumbnail1.png}" alt="">
                 </a> <!--이벤트 페이지 이동-->
               </li>
             </ul>
