HTML 닉네임 중복 버튼 활성화

--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -40,6 +40,7 @@
                                         <input name="userNickname" autocomplete="off" id="input-245"
                                                aria-labelledby="input-245-label" type="text" placeholder="필명 입력"
                                                class="mds-input-field">
+                                        <button type="button">닉네임 중복체크</button><br>
                                     </div>
                                     <button type="button" aria-label="내용 삭제" class="mds-icon--input-delete clear-button"
                                             style></button>
@@ -151,11 +152,7 @@
                                             아이디
                                             <sup>*</sup>
                                         </span>
-                                    <input autocomplete="off" id="checkLoginId" aria-labelledby="input-237-label"
-                                           aria-errormessage="input-237-messeage" type="text"
-                                           placeholder="아이디 입력" class="mds-input-field"
-                                           name="userLoginId"
-                                    >
+                                        <input type="text" name="userLoginId" id="checkLoginId" placeholder="아이디를 입력해주세요"/>
                                         <button type="button" id="checkDuplicateBtn" name="checkDuplicateId">ID 중복체크</button><br>
                                     <div id="result"></div>
                                 </div>
