"마이페이지 html, css 수정"

--- a/src/main/resources/static/css/mypage/myPageInt_secession.css
+++ b/src/main/resources/static/css/mypage/myPageInt_secession.css
@@ -153,6 +153,12 @@ a {
   border-radius: 50px;
 }
 
+#best-book-img{
+  width: 129px;
+  height: 120px;
+  border: solid #96eae8;
+}
+
 #hippo {
   width: 48px;
   height: 48px;
