--- a/src/main/resources/templates/mypage/myPageInt_secession.html
+++ b/src/main/resources/templates/mypage/myPageInt_secession.html
@@ -65,11 +65,11 @@
           <div class="main__my-reading-info-box">
             <h3>회원 탈퇴</h3>
             <div class="main__my-reading-info-div">
-              <h2 class="my-reading-info-nickname"><span >test nickname</span>의 서재</h2>
+              <h2 class="my-reading-info-nickname"><span th:text="${profileDto.userNickName}" ></span>의 서재</h2>
               <hr>
-              <p><span>서재에 기록된 도서</span><span><strong>0</strong>권</span></p>
-              <p><span>서재에 기록된 리뷰</span><span><strong>0</strong>개</span></p>
-              <p><span>서재에 기록된 포스트</span><span><strong>0</strong>개</span></p>
+              <p><span>서재에 기록된 도서</span><span><strong th:text="${#lists.size(bookContainerList)}"></strong>권</span></p>
+              <p><span>서재에 기록된 리뷰</span><span><strong th:text="${reviewCount}"></strong>개</span></p>
+              <p><span>서재에 기록된 포스트</span><span><strong th:text="${postCount}"></strong>개</span></p>
             </div>
           </div>
           <form th:action="@{/mypage/secession}" method="post">
