아이디 중복검사 JS 테스트 완료 (미완성)

--- a/src/main/resources/static/css/user/hippobook.css
+++ b/src/main/resources/static/css/user/hippobook.css
@@ -981,3 +981,13 @@ sup {
   border-radius: 4px;
 }
 
+.id_ok{
+  color:#008000;
+  display: none;
+}
+
+.id_already{
+  color:#6A82FB;
+  display: none;
+}
+
