--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -9,9 +9,37 @@
     <script defer th:src="@{/js/user/register.js}"></script>
     <script defer th:src="@{/js/user/sms_code_timer.js}"></script>
     <script defer th:src="@{/js/user/sms_click_event.js}"></script>
-    <script defer th:src="@{/js/user/id_duplication_test.js}"></script>
+<!--    <script defer th:src="@{/js/user/id_duplication_test.js}"></script>-->
 </head>
 <body data-theme="light">
+<script defer th:src="@{http://code.jquery.com/jquery-latest.js}"></script>
+<script>
+    {
+        function checkLoginId() {
+            const id = $('#userLoginId').val();
+            $.ajax({
+                url: '/register',
+                type: 'post',
+                // contentType: 'application/json',
+                data: id,
+                success:function (cnt) {
+                    if (cnt === 0) {
+                        $('.id_ok').css("display", "inline-block");
+                        $('.id_already').css("display", "none");
+                    } else {
+                        $('.id_already').css("display", "inline-block");
+                        $('.id_ok').css("display", "none");
+                        alert("아이디를 다시 입력해주세요");
+                        $('#id').val('');
+                    }
+                },
+                error: function () {
+                    alert("에러입니다");
+                }
+            });
+        }
+    }
+    </script>
 <div data-a-1120 id="wrap" class="web-mount">
     <section data-a-1120 class="content">
         <div data-g-1180 data-a-1120 class="login-container">
@@ -152,8 +180,10 @@
                                             아이디
                                             <sup>*</sup>
                                         </span>
-                                        <input type="text" name="userLoginId" id="checkLoginId" placeholder="아이디를 입력해주세요"/>
-                                        <button type="button" id="checkDuplicateBtn" name="checkDuplicateId">ID 중복체크</button><br>
+                                        <input type="text" name="userLoginId" id="id" placeholder="아이디를 입력해주세요" oninput="checkLoginId()">
+                                    <span class="id_ok">사용 가능한 아이디입니다.</span>
+                                    <span class="id_already">중복된 아이디입니다.</span>
+<!--                                        <button type="button" id="checkDuplicateBtn" name="checkDuplicateId">ID 중복체크</button><br>-->
                                     <div id="result"></div>
                                 </div>
                                 <button type="button" aria-label="내용 삭제" class="mds-icon--input-delete clear-button"
