"메세지 보낸사람 닉네임 보이게 설정"

--- a/src/main/resources/templates/message/get_letter.html
+++ b/src/main/resources/templates/message/get_letter.html
@@ -80,7 +80,7 @@
                   <img src="" alt="" />
                 </p>
                 <div class="main__post-detail-info-box">
-                  <span th:text="${messageDto.messageFrom}"></span>
+                  <span th:text="${messageDto.userNickname}"></span>
                   <ul>
                     
                     <li th:text="${messageDto.messageDate}"></li>
