--- a/src/main/resources/templates/message/letterView.html
+++ b/src/main/resources/templates/message/letterView.html
@@ -29,7 +29,7 @@
         <div class="letter-header">
           <h2 th:text="${messageViewDto.messageTitle}" class="letter-title"></h2>
           <p class="letter-info">
-            작성자: <span th:text="${messageViewDto.messageFrom}"></span> | 보낸날짜: <span th:text="${messageViewDto.messageDate}"></span>
+            작성자: <span th:text="${messageViewDto.userNickname}"></span> | 보낸날짜: <span th:text="${messageViewDto.messageDate}"></span>
           </p>
         </div>
       </div>
