--- a/src/main/resources/templates/message/send_letter.html
+++ b/src/main/resources/templates/message/send_letter.html
@@ -77,7 +77,7 @@
                   <img src="" alt="" />
                 </p>
                 <div class="main__post-detail-info-box">
-                  <span th:text="${messageDto.messageTo}"></span>
+                  <span th:text="${messageDto.userNickname}"></span>
                   <ul>
                     
                     <li th:text="${messageDto.messageDate}"></li>
