피드,팔로우 페이지 링크처리 포스트 글쓰기 페이지 동적쿼리 api 전체적인 1차 작업 완료(강사님 가이드 필요, 해당 작업 대기)

--- a/src/main/resources/templates/feed/feedpage.html
+++ b/src/main/resources/templates/feed/feedpage.html
@@ -39,19 +39,19 @@
                 <div class="main_top_category_tap">
                     <ul class="main_top_category_list">
                         <li>
-                            <a href="">내 서재</a> <!-- 내 서재 이동 -->
+                            <a th:href="@{/mypage/int}">내 서재</a> <!-- 내 서재 이동 -->
                         </li>
                         <li>
                             <a th:href="@{/feed}">피드</a> <!-- 피드 이동-->
                         </li>    
                         <li>
-                            <a href="">쪽지</a> <!-- 쪽지 이동 -->
+                            <a th:href="@{/message/letter/get}">쪽지</a> <!-- 쪽지 이동 -->
                         </li> 
                         <li>
-                            <a href="">이벤트</a> <!-- 이벤트 이동 -->
+                            <a th:href="@{/search}">검색</a> <!-- 검색 이동 -->
                         </li>
                         <li>
-                            <a th:href="@{/search}">검색</a> <!-- 검색 이동 -->
+                            <a th:href="@{/categorie/Categoriepage}">카테고리</a> <!-- 카테고리 이동 -->
                         </li>
                     </ul>
                 </div>
