--- a/src/main/resources/templates/feed/postwrite.html
+++ b/src/main/resources/templates/feed/postwrite.html
@@ -158,7 +158,7 @@
             </div>
         <div class="book_search">
           검색 : <input type="text" name="keyword">
-          <button>검색</button>
+          <button class="book_btn">검색</button>
         </div>
         <div class="book_selectarea">
         <table class="book_select">
