--- a/src/main/resources/templates/follow/followingpage.html
+++ b/src/main/resources/templates/follow/followingpage.html
@@ -20,10 +20,10 @@
             </h1>
             <div class="header_right_layout">
                 <a href=""> <!-- 알람 페이지 이동  -->
-                <img src="/images/alarm.png" alt="" class="header_right_alarm">
+                <img th:src="@{/images/main/alarm.png}" alt="" class="header_right_alarm">
                 </a>
                 <ul class="header_right_login">
-                    <a href="" class="header_right_login_box">로그인</a>
+                    <a th:href="@{/user/login}" class="header_right_login_box">로그인</a>
                 </ul>
             </div>
         </div>
@@ -32,24 +32,24 @@
             <div class="main_top_layout">
                 <a href="#" onclick="return false"> 
                     <!-- 카테고리  -->
-                        <img src="/images/Category.png" alt="" class="main_top_category">
+                        <img th:src="@{/images/main/Category.png}" alt="" class="main_top_category">
                 </a>
                 <div class="main_top_category_tap">
                     <ul class="main_top_category_list">
                         <li>
-                            <a href="">내 서재</a> <!-- 내 서재 이동 -->
+                            <a th:href="@{/mypage/int}">내 서재</a> <!-- 내 서재 이동 -->
                         </li>
                         <li>
-                            <a href="">피드</a> <!-- 피드 이동-->
+                            <a th:href="@{/feed}">피드</a> <!-- 피드 이동-->
                         </li>    
                         <li>
-                            <a href="">쪽지</a> <!-- 쪽지 이동 -->
+                            <a th:href="@{/message/letter/get}">쪽지</a> <!-- 쪽지 이동 -->
                         </li> 
                         <li>
-                            <a href="">내서재</a> <!-- 내 서재 이동 -->
+                            <a th:href="@{/search}">검색</a> <!-- 검색 이동 -->
                         </li>
                         <li>
-                            <a href="">검색</a> <!-- 검색 이동 -->
+                            <a th:href="@{/categorie/Categoriepage}">카테고리</a> <!-- 카테고리 이동 -->
                         </li>
                     </ul>
                 </div>
@@ -60,12 +60,12 @@
             <div class="feed_menu_container">
                 <ul class="feed_menu_list">
                     <li>
-                        <a href="feedpage.html" class="feed_random">
+                        <a th:href="@{/feed}" class="feed_random">
                             <span>추천</span>
                         </a>
                     </li>
                     <li>
-                        <a href="followingpage.html" class="feed_following">
+                        <a th:href="@{/feed/follow}" class="feed_following">
                             <span>팔로잉</span>
                         </a>
                     </li>
